# my_notion_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  services.env
conf/: settings.py
