[tool.poetry]
name = "my-notion"
version = "0.1.0"
description = ""
authors = ["nkolpakov <nik.vik.kolpakov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.3,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
markdown = ">=3.8.2,<4.0.0"
django-filter = ">=25.1,<26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"