[tool.ruff]
# Включаем правила, подходящие для Django
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "UP",  # pyupgrade
    "DJ",  # django
    "DRF",  # django-rest-framework
    "RUF",  # ruff-specific
]

# Игнорируем определенные правила
ignore = [
    "DJ003",  # Django model has __str__ method (может быть не всегда нужно)
    "E501",   # Длина строки (можно настроить под ваш стиль)
]
exclude = [
    "*/migrations/*",
]

# Настройки для isort (сортировка импортов)
[tool.ruff.isort]
known-first-party = ["conf"]  # Замените на имя вашего Django приложения
[tool.poetry]
name = "my-notion"
version = "0.1.0"
description = ""
authors = ["nkolpakov <nik.vik.kolpakov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.3,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
markdown = ">=3.8.2,<4.0.0"
django-filter = ">=25.1,<26.0"
psycopg2-binary = "^2.9.10"
ruff = "^0.12.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"